# pvcy-client

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/pvcy/: __init__.py  __main__.py  cli.py  client.py  connection_types.py  exception.py  project_types.py  yaml.py
stubs/requests_oauthlib/: __init__.pyi  oauth2_auth.pyi  oauth2_session.pyi
tests/data/auth/: fetch_token.json
tests/data/config/: different_first_project.yml  exported.yml  extra_project.yml  for_copying.yml  missing_first_project.yml
tests/data/responses/: get_connection.json  get_connections.json  get_job_definition.json  get_job_definitions.json  get_project.json  get_projects.json
tests/functional_tests/: test_client.py
tests/unit_tests/: test_cli.py  test_client.py  test_types.py  utils.py
